k8s/mcsv-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcsv-gateway
  namespace: crm
spec:
  selector: { app: mcsv-gateway }
  ports:
    - port: 9090
      targetPort: 9090
